Add container and website cover image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,42 @@
 <mk-navbar></mk-navbar>
-<main class="main">
-</main>
-<h3> We live for data ano. 2017</h3>
-    <div>
-        <p>Inflation rate</p>
-        <p>Economic growth {{currentMonth}} {{yearUpdated}}</p>
-        <p>Inflation rate</p>
-        <p>Inflation rate</p>
-    </div>
-    <div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Inflation rate</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Economic growth</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Population</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
 
-    Malawi stock exchange
-<router-outlet />
-<mk-footer></mk-footer>
+<div class="container mini-container">
+    <img class="cover-image" src="../assets/website_cover_image.jpg" alt="website cover image" width="970" height="600">
+    <h3> We live for data ano. 2017</h3>
+        <div>
+            <p>Inflation rate</p>
+            <p>Economic growth {{currentMonth}} {{yearUpdated}}</p>
+            <p>Inflation rate</p>
+            <p>Inflation rate</p>
+        </div>
+        <div>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Inflation rate</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Economic growth</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">Population</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        Malawi stock exchange
+    <router-outlet />
+    <mk-footer></mk-footer>
+</div>
