--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 main{
     width: 100%;
+    
+}
+.mini-container {
+    max-width: 55%;
+}
+
+.cover-image{
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
